src/Adstacy/AppBundle/Resources/public/less/layout/user.less
.user {
  width: 236px;
  height: 218px;
  margin: 14px 7px 0 7px;
  padding: 5px 10px;
  float: left;

  .profile-picture {
    float: left;
    margin-bottom: 5px;

    img {
      border-radius: 3px;
      width: 105px;
      height: 105px;
    }
  }

  .user-ads {
    float: right;
    width: 105px;
  }

  .user-mini-ad {
    float: left;
    width: 47px;
    height: 50px;
    margin: 0 5px 5px 0;
    background-color: #ccc;
  }

  .user-realname {
    font-size: 14px;
    font-weight: bold;
    height: 15px;
    margin-top: 5px;
    margin-bottom: 10px;
  }

  .user-score {
    margin-bottom: 5px;
    a {
      color: #999;
      font-size: 11px;
      font-weight: bold;
    }
  }
}

#user-profile {
  margin-left: 7px;
  margin-right: 7px;
  margin-top: 14px;
  width: 486px;

  .panel-default {
    border: 0;
    margin-bottom: 0;
  }

  .profile-picture {
    border-radius: 3px 0 0 0;
    float: left;
    margin-right: 10px;

    img {
      border-radius: 3px 0 0 0;
      width: 130px;
      height: 130px;
    }
  }
  .user-desc {
    float: left;
    width: 342px;
  }
  .user-info {
    padding: 5px 5px 0 0;
  }
  .user-info-realname {
    color: #b00;
    font-size: 20px;
    margin: 0;
    margin-bottom: 3px;
  }
  .user-info-about {
    color: #999;
    font-size: 13px;
    line-height: 1.5;
    margin: 0;
    min-height: 50px;
    .empty {
      color: #aaa;
      font-style: italic;
    }
    a {
      color: #999;
      font-style: normal;
      font-weight: bold;
    }
  }
  .user-info-menu {
    background-color: #eee;
    border-top: 1px solid #dfdfdf;
    border-radius: 0 0 4px 4px;
    margin-bottom: 0;
    padding: 5px 5px 6px 5px;
    position: relative;
    a {
      color: #888;
      display: inline-block;
      font-size: 12px;
      font-weight: bold;
      margin-left: 20px;
    }
    .follow-action {
      position: absolute;
      right: 0;
      top: -1px;
    }
    .btn-follow {
      width: 100px;
      border-radius: 0 0 3px 0;
      color: #fff;
      height: 32px;
    }
  }
}

@media screen and (max-width: 480px) {
  #user-profile {
    width: 100%;
    .user-desc {
      float: none;
      width: 100%;
      text-align: center;
    }
    .profile-picture {
      float: none;
      width: 100%;
      text-align: center;
      margin: 10px 0 0;
    }
    .user-info-realname {
      text-align: center;
    }
    .follow-action {
      position: static;
    }
  }
  .user {
    width: 100%;
    padding: 0;
    height: auto;
    .user-realname, .profile-picture, .user-ads, .user-score {
      text-align: center;
    }
    .profile-picture, .user-ads {
      float: none;
    }
    .user-ads {
      width: 100%;
    }
    .user-score {
      margin-bottom: 0;
    }
    .user-mini-ad {
      float: none;
      display: inline-block;
    }
    .follow-action {
      padding: 0;
      a {
        border-radius: 0;
      }
    }
  }
}

.page-title {
  padding:0;
}

